# BitClient

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
src/: BEncoding.cpp  BEncoding.hpp  BEncodingType.hpp  Log.cpp  Log.hpp  Torrent.cpp  Torrent.hpp
src/parser/: ConstexprTypes.hpp
tests/: BEncodingTest.cpp  CMakeLists.txt  ConstexprTypesTest.cpp  main.cpp  test.txt  test2.txt
